--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerInside"
-        android:src="@drawable/goodegg" />
+        android:src="@drawable/goodegg"
+        android:translationX="5dp"/>
 
     <TextView
         android:id="@+id/touchCountTextView"
