금연일지_금연팁_알깨기수정본

--- a/btm_menu_test/app/src/main/res/menu/bottom_menu.xml
+++ b/btm_menu_test/app/src/main/res/menu/bottom_menu.xml
@@ -8,12 +8,12 @@
         app:showAsAction="always"/>
     <item
         android:id="@+id/menu_item2"
-        android:title="홈"
+        android:title="금연 팁"
         android:icon="@drawable/home"
         app:showAsAction="always"/>
     <item
         android:id="@+id/menu_item3"
-        android:title="설정"
+        android:title="유틸"
         android:icon="@drawable/settings"
         app:showAsAction="always"/>
 </menu>
