--- a/btm_menu_test/app/src/main/res/values/style.xml
+++ b/btm_menu_test/app/src/main/res/values/style.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CustomActivityTheme" parent="Theme.AppCompat.Light">
+    <style name="CustomActivityTheme1" parent="Theme.AppCompat.Light">
         <item name="android:windowActionBar">true</item>
         <item name="android:windowNoTitle">false</item>
         <item name="android:windowBackground">@android:color/white</item>
-        <item name="android:actionBarStyle">@style/CustomActionBar</item>
+        <item name="android:actionBarStyle">@style/CustomActionBar1</item>
     </style>
 
-    <style name="CustomActionBar" parent="Widget.AppCompat.ActionBar">
+    <style name="CustomActionBar1" parent="Widget.AppCompat.ActionBar">
         <item name="android:title">기록</item>
         <!-- 다른 타이틀바 관련 속성들 -->
         <item name="android:height">1dp</item>
