--- a/btm_menu_test/app/src/main/res/layout/game_activity.xml
+++ b/btm_menu_test/app/src/main/res/layout/game_activity.xml
@@ -5,7 +5,11 @@
     android:orientation="vertical"
     android:gravity="center">
 
-
+    <Button
+        android:id="@+id/egggame_btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="니코틴 중독 자가진단" />
     <Button
         android:id="@+id/egggame_btn"
         android:layout_width="wrap_content"
