--- a/btm_menu_test/app/src/main/res/layout/game_activity.xml
+++ b/btm_menu_test/app/src/main/res/layout/game_activity.xml
@@ -15,6 +15,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="알깨기 게임" />
+    <Button
+        android:id="@+id/egggame_btn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="페활량 테스트" />
 
 
 </LinearLayout>
