아이콘,텍스트,자가진단 수정

--- a/btm_menu_test/app/src/main/res/layout/calender_main.xml
+++ b/btm_menu_test/app/src/main/res/layout/calender_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -123,4 +124,5 @@
         android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/cha_Btn"
         app:layout_constraintEnd_toEndOf="@+id/save_Btn"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
